Integrate AgentNIRS code into NIRS (WAITI 2025)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,10 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "coverage>=7.10.5",
+    "langchain>=1.0.8",
+    "langchain-core>=1.0.5",
+    "langchain-ollama>=1.0.0",
+    "langgraph>=1.0.3",
     "matplotlib>=3.10.5",
     "pandas>=2.3.2",
     "polars>=1.32.3",
@@ -13,3 +17,7 @@ dependencies = [
     "requests>=2.32.5",
     "scikit-learn>=1.7.1",
 ]
+
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
